Grace/tests/gibbs/errors/t220.grace
// ERROR = P1040
match(x)
    case
